# faceAuthorization

./: README.md  db.sqlite3  manage.py  pyproject.toml
facerecognition/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
facerecognition/migrations/: 0001_initial.py  0002_auto_20210523_1055.py  0003_alter_student_photo.py
facerecognition/static/css/: main.css
facerecognition/static/js/: main.js
facerecognition/templates/facerecognition/: create_student.html  glass_style.html  home.html  identify.html  main.html  worl.html
studypj/: asgi.py  settings.py  urls.py  wsgi.py
