[tool.poetry]
name = "faceauthorization"
version = "0.1.0"
description = ""
authors = ["macoyshev <make.oynoshev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
